--- a/关于2017.11.18号的记录.md
+++ b/关于2017.11.18号的记录.md
@@ -30,8 +30,13 @@
   
   如何解决：
   
+  
       1.时间证明一切
       
       2.不可为的事情，let it flow-  let it go- 
       
       3.坦然讲，我目前还未找到解决方法。
+      
+  
+  
+目前方法就是，如果减少 不安、贪婪、控制欲、自卑、自私？
