--- a/2017.12.15.md
+++ b/2017.12.15.md
@@ -11,3 +11,15 @@
 我觉得我该读一些书了，把我曾经喜欢的书再读一遍。
 
 这点很重要
+
+---
+
+热爱世界，make world a better place- 
+
+与世界接触，产生各式各样的联系-
+
+自己的存在感才会加强。
+
+---
+
+他们只是接触到的一小部分人而已。
